# gkbot

./: .dockerignore  .env.dist  .gitignore  .pre-commit-config.yaml  .typos.toml  AGENTS.md  DBapi.py  Dockerfile  GEMINI.md  Makefile  Pipfile  QWEN.md  README.md  bomber.py  bot.py  bot_config.py  braintrash.py  docker-compose.yml  gmdb.py  hello.py  log.py  log.txt  logging.conf  main.py  manage.py  package-lock.json  package.json  page.py  pyproject.toml  reminder.py  requirements-dev.txt  requirements.txt  root.py  run.sh  schedule.py  tasks.py  test.py  testjs.py
.github/workflows/: deploy.yml  test.yml
.opencode/agent/: lint-and-test-fixer.md
.tasks/20251219-190723/: TASK.md
.tasks/20251219-191947/: TASK.md
.tasks/20260131-164200/: task.md
.tasks/20260131-164235/: task.md
.tasks/20260131-171105/: task.md
.tasks/20260206-114344/: task.md
.tasks/20260207-124806/: task.md
.tasks/20260210-171526/: task.md
.tasks/20260215-113049/: task.md
.tasks/20260228-112951/: task.md
.tasks/20260302-163741/: task.md
.tasks/20260305-123749/: task.md
.tasks/20260305-130344/: task.md
.tasks/20260305-164900/: task.md
.tasks/20260305-170146/: task.md
.tasks/20260306-115616/: task.md
.tasks/20260306-200750/: task.md
.tasks/20260311-093953/: task.md
.tasks/20260311-101556/: task.md
.tasks/20260311-102119/: task.md
.tasks/20260313-193122/: task.md
.tasks/20260406-143753/: task.md
.tasks/20260408-093830/: task.md
.tasks/20260604-000000/: summarizator.py  task.md
.tasks/20260605-000000/: task.md
alembic/: env.py
alembic/versions/: 0485d29094c5_initial_migration.py
bot/: bot_config.py  main.py  manage.py  settings.py  setup.py
bot/components/: base.py  remind_creator.py
bot/configs/: __init__.py  admins.py  api_server.py  bot_config.py  commands.py  db.py  default_commands.py  env.py  startup.py
bot/core/: bot.py  commands.py  default_commands.py  keyboard_builder.py  notifier.py  types.py
bot/filters/: bot_admin.py  chat_type.py  command.py  long_message.py  not_command.py  tiktok.py  vk.py  x.py  youtube.py
bot/handlers/: __init__.py  admins.py  bomber.py  braintrash.py  channel.py  commands.py  error.py  hello.py  help.py  on_shutdown.py  (+10 more)
data/: create_pomodoro.sql
docs/: build.md  deploy.md  todo.md
handlers/: __init__.py  bomber.py  braintrash.py  help.py  reminder.py  road_to_the_dream.py  shiki.py  tasks.py  text_to_speach.py
hooks/: typos.py
js/: notion-api.js
lib/: DBapi.py  bot.py  page.py  schedule.py  shiki.py
models/: common.py  road.py
modules/: bomber.py  braintrash.py  log.py  reminder.py  tasks.py
scripts/: build.sh  get_bot_api_ip.sh  init.py  install_site_packages.py  run.sh
static/: anecdots.txt
tests/: test_DBapi.py  test_models.py
(+465 files in other folders)
