[project]
name = "gkbot"  
version = "3.0.0"
requires-python = ">=3.13"
dependencies = [
    "asyncio",
    "notion-client==0.9.0",
    "python-dotenv",
    "gTTS",
    "wikipedia",
    "beautifulsoup4",
    "translate",
    "youtube-search",
    "tortoise-orm==0.21.6",
    "docx2txt",
    "varname==0.13.0",
    "yt-dlp==2025.4.30",
    "pytube",
    "pure-eval",
    "edge-tts",
    "aiogram==3.18.0",
    "google-generativeai",
    "uvloop>=0.21.0",
    "openai>=1.82.1",
    "asyncpg>=0.30.0",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pyright>=1.1.402",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "types-requests>=2.32.4.20250611",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["bot/tests"]
pythonpath = ["bot"]

[tool.mypy]
ignore_missing_imports = true
