[project]
name = "gkbot"  
version = "3.0.0"
requires-python = ">=3.13"
dependencies = [
    "asyncio",
    "notion-client==0.9.0",
    "python-dotenv",
    "gTTS",
    "wikipedia",
    "beautifulsoup4",
    "translate",
    "youtube-search",
    "docx2txt",
    "varname==0.13.0",
    "yt-dlp==2026.1.29",
    "pytube",
    "pure-eval",
    "edge-tts",
    "aiogram==3.26.0",
    "google-genai",
    "uvloop>=0.21.0",
    "openai>=1.82.1",
    "asyncpg>=0.30.0",
    "aiohttp>=3.11.13",
    "sqlalchemy[asyncio]>=2.0.48",
    "alembic>=1.18.4",
    "aiosqlite>=0.17.0",
    "aiomysql>=0.3.2",
    "google-generativeai>=0.8.6",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pyright>=1.1.408",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "types-requests>=2.32.4.20250611",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["bot/tests"]
pythonpath = ["bot"]

[tool.mypy]
ignore_missing_imports = true
